[gd_scene load_steps=12 format=3 uid="uid://byv8nd4kxpkro"]

[ext_resource type="Script" path="res://Core/player.gd" id="1_igtm3"]
[ext_resource type="AudioStream" uid="uid://bbq11hs7x1wc3" path="res://Core/Sound/Pickup_Honey.wav" id="2_4u6o7"]
[ext_resource type="PackedScene" uid="uid://dg4xdso6thicq" path="res://Core/Art/Bee_Static.glb" id="2_rb71e"]
[ext_resource type="AudioStream" uid="uid://dj2hhtlrvpcrd" path="res://Core/Sound/Pickup_Jar.wav" id="3_d0pwn"]
[ext_resource type="AudioStream" uid="uid://burfvfnfkc770" path="res://Core/Sound/Buzz.wav" id="3_gfl7y"]
[ext_resource type="AudioStream" uid="uid://bxewp8rqhqb3m" path="res://Core/Sound/Pickup_Wing.wav" id="4_3cdhx"]
[ext_resource type="AudioStream" uid="uid://dpu8g2l18jwwc" path="res://Core/Sound/Flower_Land.wav" id="5_um41a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jkrjm"]
albedo_color = Color(0, 0.0117647, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_5pi4y"]
material = SubResource("StandardMaterial3D_jkrjm")

[sub_resource type="SphereShape3D" id="SphereShape3D_uaofe"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cbwow"]
radius = 1.5

[node name="Player" type="Area3D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_igtm3")
honey_sound = ExtResource("2_4u6o7")
jar_sound = ExtResource("3_d0pwn")
wing_sound = ExtResource("4_3cdhx")
flower_sound = ExtResource("5_um41a")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_5pi4y")

[node name="Turn" type="Node3D" parent="."]

[node name="Bee_Static" parent="Turn" instance=ExtResource("2_rb71e")]
transform = Transform3D(-1.67938e-08, -1.34003e-16, -0.384197, 1.34003e-16, 0.384197, -1.34003e-16, 0.384197, -1.34003e-16, -1.67938e-08, 0, 0.169138, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_uaofe")

[node name="Magnet" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Magnet"]
shape = SubResource("CylinderShape3D_cbwow")

[node name="Buzz" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_gfl7y")
volume_db = -12.0
unit_size = 6.0
max_db = 1.0

[node name="Pickup" type="AudioStreamPlayer3D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="Magnet" to="." method="_on_magnet_area_entered"]
[connection signal="area_exited" from="Magnet" to="." method="_on_magnet_area_exited"]
